fixe des warns pour jungler